api-gateway/deployments/k8s/dev/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: game-metrics
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
